// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. primary tile 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  font-size: 12px;
  font-weight: 400;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  margin-right: 5px;
}

.IS3 {
  color: rgba(227,70,5,1.00);
  font-family: TimesDigitalW04-RegularSC;
  letter-spacing: 1.4px;
  line-height: 12px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  margin-right: 15px;
}

.IS6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
  className="S2"
>
  <div
    className="S2"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        ROYALS
      </div>
    </div>
    <div
      className="IS6 S2"
    >
      <div
        className="IS5 S2"
      >
        <div
          className="IS4 S2"
        >
          <div
            className="IS2 S2"
          >
            <Svg
              height={8}
              role="img"
              title="Diamond Icon"
              viewBox="0 0 20 20"
              width={8}
            >
              <G
                fill="#E34605"
              >
                <Path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </G>
            </Svg>
          </div>
          <div
            aria-label="new Flag"
            className="IS3 S3"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
    </div>
    <h3
      aria-level="3"
      className="S4"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
  </div>
  <div
    className="S5"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</div>
`;

exports[`2. primary tiles without image 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  font-size: 12px;
  font-weight: 400;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S5 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S6 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  margin-right: 5px;
}

.IS3 {
  color: rgba(227,70,5,1.00);
  font-family: TimesDigitalW04-RegularSC;
  letter-spacing: 1.4px;
  line-height: 12px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  margin-right: 15px;
}

.IS6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
  className="S2"
>
  <div
    className="S2"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        ROYALS
      </div>
    </div>
    <div
      className="IS6 S2"
    >
      <div
        className="IS5 S2"
      >
        <div
          className="IS4 S2"
        >
          <div
            className="IS2 S2"
          >
            <Svg
              height={8}
              role="img"
              title="Diamond Icon"
              viewBox="0 0 20 20"
              width={8}
            >
              <G
                fill="#E34605"
              >
                <Path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </G>
            </Svg>
          </div>
          <div
            aria-label="new Flag"
            className="IS3 S3"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
    </div>
    <h3
      aria-level="3"
      className="S4"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
  </div>
  <div
    className="S6"
  >
    <span
      className="S5"
    >
      
      The 
      <span
        className="S5"
      >
        Duke of Edinburgh
      </span>
       could be charged with driving without due care and attention after his car accident yesterday
      ...
    </span>
  </div>
</div>
`;

exports[`3. lead one full width slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  font-size: 12px;
  font-weight: 400;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  margin-right: 5px;
}

.IS3 {
  color: rgba(227,70,5,1.00);
  font-family: TimesDigitalW04-RegularSC;
  letter-spacing: 1.4px;
  line-height: 12px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  margin-right: 15px;
}

.IS6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
  className="S2"
>
  <div
    className="S2"
  >
    <div
      className="S2"
    >
      <div
        className="IS1 S1"
      >
        ROYALS
      </div>
    </div>
    <div
      className="IS6 S2"
    >
      <div
        className="IS5 S2"
      >
        <div
          className="IS4 S2"
        >
          <div
            className="IS2 S2"
          >
            <Svg
              height={8}
              role="img"
              title="Diamond Icon"
              viewBox="0 0 20 20"
              width={8}
            >
              <G
                fill="#E34605"
              >
                <Path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </G>
            </Svg>
          </div>
          <div
            aria-label="new Flag"
            className="IS3 S3"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
    </div>
    <h3
      aria-level="3"
      className="S4"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
  </div>
  <div
    className="S5"
  >
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</div>
`;

exports[`4. lead one and one slice 1`] = `
<style>
.S1 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  line-height: 14px;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  font-size: 12px;
  font-weight: 400;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S5 {
  margin-bottom: 10px;
}

.S6 {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin-bottom: 0px;
}

.S7 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  font-weight: inherit;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  color: rgba(29,29,27,1.00);
}

.IS2 {
  margin-right: 5px;
}

.IS3 {
  color: rgba(227,70,5,1.00);
  font-family: TimesDigitalW04-RegularSC;
  letter-spacing: 1.4px;
  line-height: 12px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  margin-right: 15px;
}

.IS6 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS7 {
  color: rgba(29,29,27,1.00);
}

.IS8 {
  margin-right: 5px;
}

.IS9 {
  color: rgba(60,129,190,1.00);
  font-family: TimesDigitalW04-RegularSC;
  letter-spacing: 1.4px;
  line-height: 12px;
}

.IS10 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  margin-right: 15px;
}

.IS12 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
  className="configweb__Base-kjGEdW cNGWYk configweb__Base-eXHdFh jFKTdO S2"
>
  <div
    className="responsiveweb__SliceContainer-kEikFj fWXWTf S2"
  >
    <div
      className="responsiveweb__Base-kQMzah cxejRh responsiveweb__Base-jXvbcq dmuCnu responsiveweb__Base-dIyxxW eFWEvM S2"
    >
      <div
        className="responsiveweb__Base-iFMijX gmChNY responsiveweb__Base-drDvXX xjUQC responsiveweb__Base-jIurKX hSGlCR S2"
      >
        <div
          className="S2"
        >
          <div
            className="S2"
          >
            <div
              className="S2"
            >
              <div
                className="IS1 S1"
              >
                ROYALS
              </div>
            </div>
            <div
              className="IS6 S2"
            >
              <div
                className="IS5 S2"
              >
                <div
                  className="IS4 S2"
                >
                  <div
                    className="IS2 S2"
                  >
                    <Svg
                      height={8}
                      role="img"
                      title="Diamond Icon"
                      viewBox="0 0 20 20"
                      width={8}
                    >
                      <G
                        fill="#E34605"
                      >
                        <Path
                          d="M 0,10 10,20 20,10 10,0 Z"
                        />
                      </G>
                    </Svg>
                  </div>
                  <div
                    aria-label="new Flag"
                    className="IS3 S3"
                    data-testid="flag-new"
                  >
                    new
                  </div>
                </div>
              </div>
            </div>
            <h3
              aria-level="3"
              className="S4"
              role="heading"
            >
              Prince Philip ‘could be prosecuted’ over car crash
            </h3>
          </div>
          <div
            className="S5"
          >
            <Image
              aspectRatio={1.7777777777777777}
              uri="https://img/someImage"
            />
          </div>
        </div>
      </div>
      <div
        className="responsiveweb-fhQnWB dWVMyV S2"
      />
      <div
        className="responsiveweb__SupportsContainer-eXSNWD dpijfw S2"
      >
        <div
          className="responsiveweb-brngwq gvaiUN S2"
        >
          <div
            className="S2"
          >
            <div
              className="S2"
            >
              <div
                className="S2"
              >
                <div
                  className="IS7 S1"
                >
                  CYBER CRIME
                </div>
              </div>
              <div
                className="IS12 S2"
              >
                <div
                  className="IS11 S2"
                >
                  <div
                    className="IS10 S2"
                  >
                    <div
                      className="IS8 S2"
                    >
                      <Svg
                        height={8}
                        role="img"
                        title="Diamond Icon"
                        viewBox="0 0 20 20"
                        width={8}
                      >
                        <G
                          fill="#3C81BE"
                        >
                          <Path
                            d="M 0,10 10,20 20,10 10,0 Z"
                          />
                        </G>
                      </Svg>
                    </div>
                    <div
                      aria-label="updated Flag"
                      className="IS9 S3"
                      data-testid="flag-updated"
                    >
                      updated
                    </div>
                  </div>
                </div>
              </div>
              <h3
                aria-level="3"
                className="S4"
                role="heading"
              >
                GCHQ gives girls free cyber-classes to tackle gender gap
              </h3>
            </div>
            <div
              className="S7"
            >
              <span
                className="S6"
              >
                
                GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
              </span>
              <span
                className="S6"
              >
                 
                The intelligence
                ...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
